devel
	2007-10-16 Rob Braun bbraun@synack.net
	* include/xar.h.in src/xar.c lib/io.c lib/lzmaxar.c lib/bzxar.c lib/archive.c lib/zxar.c: Added an option to pass arguments to the compression code.  This to allow specifying compression levels to gzip, bzip2, and lzma.
	* lib/io.c: Issue 41, fixed a bug where rsize was being used uninitialized.
	* lib/io.c: Issue 42, log a warning and continue if archived-checksum doesn't appear when archiving a file.
	* lib/archive.c: Issue 43, free the buffer in xar_extract_tobuffersz() if there is an error extracting the file.
	2007-10-02 Rob Braun bbraun@synack.net
	*  test/compression test/data include/config.h.in include/xar.h.in src/xar.1 src/xar.c configure.ac lib/lzmaxar.c lib/lzmaxar.h lib/io.c lib/bzxar.c  lib/Makefile.inc.in lib/zxar.c INSTALL: Incorporate a patch from anders.f.bjorklund for adding lzma compression support.
	2007-10-02 Rob Braun bbraun@synack.net
	* include/xar.h.in lib/io.c lib/io.h lib/archive.c: Add a "streaming" API that allows for file data to be extracted incrementally, like the zlib decompression API, instead of requiring the entire file to fit in memory like xar_extract_tobuffer().  This is the inital commit of the API and may still change.  This change is based on a patch from Charles Srstka.
	2007-09-26 Rob Braun bbraun@synack.net
	* lib/io.c: Consolidate the lseek handling code into one function.
		Contributed by Charles Srstka as part of Issue 2.
	2007-09-21 Rob Braun bbraun@synack.net
	* include/xar.h.in src/xar.c src/xar.1 lib/stat.c: Only extract setuid/setgid bits if the user/group are the same as the archived file (if -p/-P are specified on the command line) OR if the newly added --keep-setuid flag is specified.
	* configure.ac lib/stat.c: Fix the autoconf test for ino_t size, and switch the inode and device number printf's to use the autogenerated INO_STRING and DEV_STRING to get the correct formatting parameter.
	2007-09-20 Rob Braun bbraun@synack.net